--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -30,10 +30,13 @@ flutter:
       android:
         package: io.flipt.client
         pluginClass: none
+      ios:
+        pluginClass: none
 homepage: https://flipt.io
 name: flipt_client
 platforms:
   android: null
+  ios: null
   linux: null
   macos: null
 version: 0.9.0-rc.6
