--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -142,12 +142,15 @@ jobs:
       - name: Checkout Sources
         uses: actions/checkout@v4
 
-      - name: Install Dart
-        uses: dart-lang/setup-dart@v1
+      - name: Setup Flutter SDK
+        uses: flutter-actions/setup-flutter@v4
+        with:
+          channel: stable
+          version: latest
 
-      - name: Get Dart dependencies
+      - name: Get Flutter dependencies
         working-directory: flipt-client-dart
-        run: dart pub get
+        run: flutter pub get
 
       - name: Format Dart code
         working-directory: flipt-client-dart
