chore: strip at package time too
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-darwin.yml
+++ b/.github/workflows/package-ffi-engine-darwin.yml
@@ -52,8 +52,13 @@ jobs:
       - name: Build
         run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
 
-      - name: Strip
+      - name: Strip dylib
+        if: contains(matrix.platform.target, 'darwin')
         run: strip -x target/${{ matrix.platform.target }}/release/libfliptengine.dylib
+
+      - name: Strip static library
+        if: contains(matrix.platform.target, 'ios')
+        run: strip -x target/${{ matrix.platform.target }}/release/libfliptengine.a
 
       - name: Package
         run: |
