fix: path issue when extracting ios lib
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-ios.yml
+++ b/.github/workflows/package-ffi-engine-ios.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           for platform in iOS-aarch64 iOS-aarch64-simulator; do
             mkdir -p /tmp/flipt-engine-ffi-${platform}
-            tar -xzvf /tmp/flipt-engine-ffi-${platform}.tar.gz -C /tmp/${platform}
+            tar -xzvf /tmp/flipt-engine-ffi-${platform}.tar.gz -C /tmp/flipt-engine-ffi-${platform}
           done
 
       - name: Move Artifacts
