--- a/.github/workflows/package-ffi-engine-android.yml
+++ b/.github/workflows/package-ffi-engine-android.yml
@@ -33,7 +33,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
+
+        run: |
+          rustup update nightly
+          rustup default nightly
+          rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -50,6 +54,8 @@ jobs:
 
       - name: Build
         run: cargo ndk --platform 30 --target ${{ matrix.platform.arch }} build --release
+        env:
+          RUSTFLAGS: "-Zlocation-detail=none -Zfmt-debug=none"
 
       - name: Package
         run: |
