--- a/.github/workflows/package-ffi-engine-darwin.yml
+++ b/.github/workflows/package-ffi-engine-darwin.yml
@@ -37,7 +37,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
+        run: |
+          rustup update nightly
+          rustup default nightly
+          rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -51,6 +54,8 @@ jobs:
 
       - name: Build
         run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
+        env:
+          RUSTFLAGS: "-Zlocation-detail=none -Zfmt-debug=none"
 
       - name: Strip dylib
         if: contains(matrix.platform.target, 'darwin')
