--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -33,7 +33,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable
+        run: |
+          rustup update nightly
 
       - name: Install musl-gcc
         run: |
