--- a/.github/workflows/package-ffi-engine-windows.yml
+++ b/.github/workflows/package-ffi-engine-windows.yml
@@ -28,7 +28,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
+        run: |
+          rustup update nightly
+          rustup default nightly
+          rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -42,6 +45,8 @@ jobs:
 
       - name: Build
         run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
+        env:
+          RUSTFLAGS: "-Zlocation-detail=none -Zfmt-debug=none"
 
       - name: Package
         run: |
