--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -25,7 +25,7 @@ flutter:
         package: io.flipt.client
         pluginClass: none
       ios:
-        dartPluginClass: FliptClient # this disables the native plugin registration
+        dartPluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
-version: 0.9.0-rc.10
+version: 0.9.0-rc.11
