--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -32,7 +32,7 @@ flutter:
         package: io.flipt.client
         pluginClass: none
       ios:
-        dartPluginClass: FliptClient
+        pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
 version: 0.9.0-rc.16
