--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "flipt-client"
-version = "0.19.0"
+version = "0.9.0-rc.17"
 description = "Flipt Client Evaluation SDK"
 authors = [ "Flipt Devs <dev@flipt.io>",]
 readme = "README.md"
