--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -5,36 +5,36 @@ dependencies:
 description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
   build_runner: ^2.3.3
-  ffigen: ">=9.0.0 <19.0.0"
+  ffigen: '>=9.0.0 <19.0.0'
   json_serializable: ^6.6.2
-  lints: ">=4.0.0 <6.0.0"
+  lints: '>=4.0.0 <6.0.0'
   test: ^1.21.0
 environment:
-  flutter: ">=1.20.0"
-  sdk: ">=2.17.0 <4.0.0"
+  flutter: '>=1.20.0'
+  sdk: '>=2.17.0 <4.0.0'
 files:
+- native/darwin_aarch64/libfliptengine.dylib
+- native/darwin_x86_64/libfliptengine.dylib
+- native/linux_aarch64/libfliptengine.so
+- native/linux_x86_64/libfliptengine.so
+- native/windows_x86_64/fliptengine.dll
+- ios/FliptEngineFFI.xcframework
+flutter:
+  assets:
   - native/darwin_aarch64/libfliptengine.dylib
   - native/darwin_x86_64/libfliptengine.dylib
   - native/linux_aarch64/libfliptengine.so
   - native/linux_x86_64/libfliptengine.so
   - native/windows_x86_64/fliptengine.dll
-  - ios/FliptEngineFFI.xcframework
-flutter:
-  assets:
-    - native/darwin_aarch64/libfliptengine.dylib
-    - native/darwin_x86_64/libfliptengine.dylib
-    - native/linux_aarch64/libfliptengine.so
-    - native/linux_x86_64/libfliptengine.so
-    - native/windows_x86_64/fliptengine.dll
   plugin:
     platforms:
       android:
+        ffiPlugin: true
         package: io.flipt.client
         pluginClass: none
-        ffiPlugin: true
       ios:
-        pluginClass: FliptClient
         ffiPlugin: true
+        pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
-version: 0.9.0-rc.19
+version: 0.9.0-rc.20
