feat(java): expose snapshot api
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation libs.jna.platform
     testImplementation platform(libs.junit.bom)
     testImplementation libs.junit.jupiter
+    testImplementation 'org.skyscreamer:jsonassert:1.5.0'
 }
 
 spotless {
