--- a/flipt-client-java/.gitignore
+++ b/flipt-client-java/.gitignore
@@ -8,10 +8,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -44,3 +41,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 src/main/resources
+
