--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -42,6 +42,7 @@
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.0.0",
+    "@types/use-sync-external-store": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
@@ -69,6 +70,7 @@
     "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@flipt-io/flipt-client-js": "^0.0.6"
+    "@flipt-io/flipt-client-js": "^0.0.6",
+    "use-sync-external-store": "^1.5.0"
   }
 }
