--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -66,8 +66,8 @@
     "typescript": "^5.6.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "@flipt-io/flipt-client-js": "^0.0.6",
