--- a/flipt-client-js/package.json
+++ b/flipt-client-js/package.json
@@ -78,6 +78,8 @@
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@rollup/plugin-typescript": "^12.1.0",
     "@rollup/plugin-wasm": "^6.2.2",
     "@types/jest": "^29.5.12",
@@ -86,6 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "eslint": "^9.28.0",
+    "globals": "^16.2.0",
     "jest": "^29.7.0",
     "node-fetch": "^3.3.0",
     "prettier": "^3.1.0",
@@ -116,4 +119,3 @@
     "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-js"
   }
 }
-
