chore: add owner to github token action request
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           app-id: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
           private-key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
+          owner: ${{ github.repository_owner }}
 
       - name: Get Pub.Dev OIDC Token
         if: ${{ inputs.sdks == 'dart' }}
