--- a/.github/workflows/package-wasm-sdks.yml
+++ b/.github/workflows/package-wasm-sdks.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           app-id: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
           private-key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
+          owner: ${{ github.repository_owner }}
 
       - name: Build Individual SDK(s)
         env:
