--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -25,6 +25,8 @@ thiserror = "2.0.3"
 reqwest-retry = "0.7.0"
 reqwest-middleware = "0.4.0"
 base64 = "0.22"
+log = "0.4"
+env_logger = "0.10"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
