--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     testImplementation platform(libs.junit.bom)
     testImplementation libs.junit.jupiter
     testImplementation 'org.skyscreamer:jsonassert:1.5.3'
+    testImplementation 'org.slf4j:slf4j-api:2.0.13'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.13'
 }
 
 spotless {
