--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -5,9 +5,9 @@ dependencies:
 description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
   build_runner: ^2.3.3
-  ffigen: ">=9.0.0 <20.0.0"
+  ffigen: '>=9.0.0 <20.0.0'
   json_serializable: ^6.6.2
-  lints: ">=4.0.0 <7.0.0"
+  lints: '>=4.0.0 <7.0.0'
   test: ^1.21.0
 environment:
   flutter: '>=1.20.0'
@@ -37,4 +37,4 @@ flutter:
         pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
-version: 0.9.0
+version: 0.10.0
