--- a/.github/workflows/package-ffi-engine-ios.yml
+++ b/.github/workflows/package-ffi-engine-ios.yml
@@ -4,7 +4,7 @@ on:
     inputs:
       release_tag:
         description: 'Release tag to upload XCFramework to (e.g. flipt-engine-ffi-v0.9.0)'
-        required: false
+        required: true
         type: string
 
 permissions:
