--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -2,7 +2,10 @@ dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-description: Flipt Client Evaluation SDK for Dart
+description: |
+  Flipt Client Evaluation SDK for Dart
+  
+  **Note:** As of 1.0.0, `FliptEvaluationClient` has been renamed to `FliptClient` for consistency with other SDKs and Dart idioms. Update your code accordingly. 0.x versions are now deprecated.
 dev_dependencies:
   build_runner: ^2.3.3
   ffigen: '>=9.0.0 <20.0.0'
