--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     implementation libs.jackson.dataformat.xml
     implementation libs.jackson.datatype.jdk8
     implementation libs.jna.platform
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
+    testCompileOnly libs.lombok
+    testAnnotationProcessor libs.lombok
     testImplementation platform(libs.junit.bom)
     testImplementation libs.junit.jupiter
     testImplementation 'org.skyscreamer:jsonassert:1.5.3'
