--- a/flipt-client-java/gradle/libs.versions.toml
+++ b/flipt-client-java/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 jackson = "2.19.0"
 jna = "5.17.0"
 junit = "5.11.4"
+lombok = "1.18.32"
 
 [libraries]
 jackson-dataformat-xml = { group = "com.fasterxml.jackson.dataformat", name = "jackson-dataformat-xml", version.ref = "jackson" }
@@ -9,3 +10,4 @@ jackson-datatype-jdk8 = { group = "com.fasterxml.jackson.datatype", name = "jack
 jna-platform = { group = "net.java.dev.jna", name = "jna-platform", version.ref = "jna" }
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
+lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
