--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -17,11 +17,12 @@ path = "ext/**/*"
 path = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-pydantic = "<3.0"
+python = ">=3.8,<4.0"
+pydantic = ">=1.10,<3.0"
 
 [tool.poetry.scripts]
 test = "scripts:test"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=23.11,<26.0"
+flake8 = ">=6.0,<8.0"
