--- a/flipt-client-ruby/.rubocop.yml
+++ b/flipt-client-ruby/.rubocop.yml
@@ -12,11 +12,29 @@ Metrics/BlockLength:
     - "spec/**/*"
     - "test/**/*"
 
-Metrics/MethodLength:
-  Max: 20
+Metrics/ClassLength:
+  Max: 200
   Exclude:
     - "spec/**/*"
     - "test/**/*"
+
+Metrics/MethodLength:
+  Max: 50
+  Exclude:
+    - "spec/**/*"
+    - "test/**/*"
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/ParameterLists:
+  Enabled: false
 
 Layout/LineLength:
   Exclude:
