--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -21,8 +21,6 @@ python = ">=3.8,<4.0"
 pydantic = ">=1.10,<3.0"
 packaging = "^24.0"
 
-[tool.poetry.scripts]
-test = "scripts:test"
-
 [tool.poetry.group.dev.dependencies]
 black = ">=23.11,<26.0"
+pytest = "^8.2.0"
