feat!(python): Python 1.0 (#1060)
* feat!(python): redo for 1.0 release

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fix namespace option

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: use timedelta for intervals

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: update readme

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* feat: add snapshot support

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: poetry lock

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fmt

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add packaging dep

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: update README

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: increase timeouts for ffi tests

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add snapshotting to readme

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to fix python CI slowness

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to invoke python tests directly

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore(python): switch to pytest

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: install dev:

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: rename test file

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: call close on python client

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: handle shutdown in engine more immediately

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: turn on logging in engine

Signed-off-by: Mark Phelp

--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -17,11 +17,10 @@ path = "ext/**/*"
 path = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-pydantic = "<3.0"
-
-[tool.poetry.scripts]
-test = "scripts:test"
+python = ">=3.8,<4.0"
+pydantic = ">=1.10,<3.0"
+packaging = "^24.0"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=23.11,<26.0"
+pytest = "^8.2.0"
