--- a/.github/workflows/package-ffi-engine-ios.yml
+++ b/.github/workflows/package-ffi-engine-ios.yml
@@ -2,8 +2,10 @@ name: Package FFI Engine (iOS)
 on:
   workflow_dispatch:
     inputs:
-      tag:
+      release_tag:
+        description: 'Release tag to upload XCFramework to (e.g. flipt-engine-ffi-v0.9.0)'
         required: true
+        type: string
 
 permissions:
   contents: write
@@ -27,7 +29,7 @@ jobs:
         with:
           script: |
             const { owner, repo } = context.repo;
-            const tag = '${{ inputs.tag }}';
+            const tag = '${{ inputs.release_tag }}';
             const { data: release } = await github.rest.repos.getReleaseByTag({
               owner,
               repo,
@@ -133,7 +135,7 @@ jobs:
 
       - name: Upload Release Assets (Tag)
         uses: softprops/action-gh-release@v2.2.1
-        if: startsWith(inputs.tag, 'flipt-engine-ffi-v')
+        if: startsWith(inputs.release_tag, 'flipt-engine-ffi-v')
         with:
-          tag_name: ${{ inputs.tag }}
+          tag_name: ${{ inputs.release_tag }}
           files: /tmp/Sources/FliptEngineFFI.xcframework.tar.gz
