chore: fmt with prettier
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Release tag to download prebuilt engine (e.g. flipt-engine-ffi-v0.9.0)'
+        description: "Release tag to download prebuilt engine (e.g. flipt-engine-ffi-v0.9.0)"
         required: false
         type: string
 
