--- a/.github/workflows/package-ffi-engine-ios.yml
+++ b/.github/workflows/package-ffi-engine-ios.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Release tag to upload XCFramework to (e.g. flipt-engine-ffi-v0.9.0)'
+        description: "Release tag to upload XCFramework to (e.g. flipt-engine-ffi-v0.9.0)"
         required: true
         type: string
 
