--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -184,6 +184,8 @@ jobs:
 
       - name: Install Flipt
         uses: flipt-io/setup-action@v0.3.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download Artifact (Android x86_64)
         run: |
