--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const sha = context.payload.workflow_run.head_sha;
+            const sha = context.payload.workflow_run ? context.payload.workflow_run.head_sha : context.sha;
             const { owner, repo } = context.repo;
             await github.rest.repos.createCommitStatus({
               owner,
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flipt
-        uses: flipt-io/setup-action@v0.3.1
+        uses: flipt-io/setup-action@v0.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -189,16 +189,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flipt
-        uses: flipt-io/setup-action@v0.3.1
+        uses: flipt-io/setup-action@v0.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download Prebuilt XCFramework
         run: |
+          rm -rf flipt-client-swift/Sources/FliptEngineFFI.xcframework
+
           curl -L -o FliptEngineFFI.xcframework.tar.gz \
             https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${{ github.event.inputs.release_tag }}/FliptEngineFFI.xcframework.tar.gz
+
           mkdir -p flipt-client-swift/Sources/
+
           tar -xzvf FliptEngineFFI.xcframework.tar.gz -C flipt-client-swift/Sources/
+          ls -la flipt-client-swift/Sources/
 
       - name: Run Flipt
         env:
