chore: cant use prebuilt xcframework since that only contains ios
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -162,7 +162,7 @@ jobs:
           path: ./flipt-client-kotlin-android/build/reports
 
   test-prebuilt:
-    name: Integration Tests (Prebuilt Engine)
+    name: Integration Tests (Released Engine)
     runs-on: ubuntu-22.04
     if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.release_tag != '' }}
     timeout-minutes: 20
