--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -132,6 +132,9 @@ jobs:
             -headers "build/xcframework/macos-arm64/Headers" \
             -output "flipt-client-swift/Sources/FliptEngineFFI.xcframework"
 
+      - name: "Debug: List xcframework contents"
+        run: ls -lR flipt-client-swift/Sources/FliptEngineFFI.xcframework
+
       - name: Run Flipt
         env:
           FLIPT_STORAGE_TYPE: "local"
@@ -181,9 +184,10 @@ jobs:
             });
 
   test-prebuilt:
-    name: Integration Tests (Prebuilt XCFramework)
+    name: Integration Tests (Released Engine)
     runs-on: macos-14
     if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.release_tag != '' }}
+    timeout-minutes: 20
     steps:
       - name: Checkout Sources
         uses: actions/checkout@v4
@@ -193,17 +197,60 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Download Prebuilt XCFramework
+      - name: Download Prebuilt Engine
+        run: |
+          curl -L -o /tmp/flipt-engine-ffi-Darwin-aarch64.tar.gz \
+            https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${{ github.event.inputs.release_tag }}/flipt-engine-ffi-Darwin-aarch64.tar.gz
+
+          curl -L -o /tmp/flipt-engine-ffi-iOS-aarch64.tar.gz \
+            https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${{ github.event.inputs.release_tag }}/flipt-engine-ffi-iOS-aarch64.tar.gz
+
+          curl -L -o /tmp/flipt-engine-ffi-iOS-aarch64-sim.tar.gz \
+            https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${{ github.event.inputs.release_tag }}/flipt-engine-ffi-iOS-aarch64-sim.tar.gz
+
+      - name: Extract Artifacts
+        run: |
+          mkdir -p /tmp/flipt-engine-ffi-Darwin-aarch64
+          mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64
+          mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64-sim
+
+          tar -xzvf /tmp/flipt-engine-ffi-Darwin-aarch64.tar.gz -C /tmp/flipt-engine-ffi-Darwin-aarch64
+          tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64
+          tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64-sim.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64-sim
+
+      - name: Move Artifacts
+        run: |
+          mkdir -p build/xcframework/ios-arm64/Headers
+          mkdir -p build/xcframework/ios-arm64-simulator/Headers
+          mkdir -p build/xcframework/macos-arm64/Headers
+
+          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a \
+             build/xcframework/ios-arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-sim/release/libfliptengine.a \
+             build/xcframework/ios-arm64-simulator/
+          mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a \
+             build/xcframework/macos-arm64/
+
+          for platform in ios-arm64 ios-arm64-simulator macos-arm64; do
+            cp flipt-engine-ffi/include/flipt_engine.h build/xcframework/${platform}/Headers/
+            cp flipt-engine-ffi/include/module.modulemap build/xcframework/${platform}/Headers/
+          done
+
+      - name: Xcode Build
         run: |
           rm -rf flipt-client-swift/Sources/FliptEngineFFI.xcframework
 
-          curl -L -o FliptEngineFFI.xcframework.tar.gz \
-            https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${{ github.event.inputs.release_tag }}/FliptEngineFFI.xcframework.tar.gz
+          xcodebuild -create-xcframework \
+            -library "build/xcframework/ios-arm64/libfliptengine.a" \
+            -headers "build/xcframework/ios-arm64/Headers" \
+            -library "build/xcframework/ios-arm64-simulator/libfliptengine.a" \
+            -headers "build/xcframework/ios-arm64-simulator/Headers" \
+            -library "build/xcframework/macos-arm64/libfliptengine.a" \
+            -headers "build/xcframework/macos-arm64/Headers" \
+            -output "flipt-client-swift/Sources/FliptEngineFFI.xcframework"
 
-          mkdir -p flipt-client-swift/Sources/
-
-          tar -xzvf FliptEngineFFI.xcframework.tar.gz -C flipt-client-swift/Sources/
-          ls -la flipt-client-swift/Sources/
+      - name: "Debug: List xcframework contents"
+        run: ls -lR flipt-client-swift/Sources/FliptEngineFFI.xcframework
 
       - name: Run Flipt
         env:
