feat: split Dart SDK into platform-specific packages
Split the monolithic Dart SDK into 3 platform-specific packages to
address pub.dev's 100MB size limit:

- flipt_client: Desktop/server platforms (Linux, macOS, Windows) ~48MB
- flipt_client_android: Android-specific package ~12MB
- flipt_client_ios: iOS-specific package ~40MB

Key changes:
- Created separate package structures for Android and iOS
- Updated base package to exclude mobile platforms with helpful errors
- Modified build scripts to handle 3 separate package builds
- Updated release scripts to support new package structure
- Added platform detection to guide users to correct package

This allows each package to stay under pub.dev's size limit while
maintaining the same API across all platforms.

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -2,10 +2,12 @@ dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-description: 'Flipt Client Evaluation SDK for Dart
+description: 'Flipt Client Evaluation SDK for Dart (Desktop and Server platforms)
 
 
-  **Note:** As of 1.0.0, `FliptEvaluationClient` has been renamed to `FliptClient`
+  **Note:** For Android use flipt_client_android. For iOS use flipt_client_ios.
+
+  As of 1.0.0, `FliptEvaluationClient` has been renamed to `FliptClient`
   for consistency with other SDKs and Dart idioms. Update your code accordingly. 0.x
   versions are now deprecated.
 
@@ -24,22 +26,6 @@ files:
 - native/linux_aarch64/libfliptengine.so
 - native/linux_x86_64/libfliptengine.so
 - native/windows_x86_64/fliptengine.dll
-- ios/FliptEngineFFI.xcframework
-flutter:
-  assets:
-  - native/darwin_aarch64/libfliptengine.dylib
-  - native/linux_aarch64/libfliptengine.so
-  - native/linux_x86_64/libfliptengine.so
-  - native/windows_x86_64/fliptengine.dll
-  plugin:
-    platforms:
-      android:
-        ffiPlugin: true
-        package: io.flipt.client
-        pluginClass: none
-      ios:
-        ffiPlugin: true
-        pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
 version: 1.1.0
