chore: update Android build script to use 16kb page size (#1476)
* update Android build script to use 16kb page size

Signed-off-by: Matt Lampe <matt@lampe.io>

* fix: add package-ffi-engine-android.yml to its own PR path

Signed-off-by: Matt Lampe <matt@lampe.io>

---------

Signed-off-by: Matt Lampe <matt@lampe.io>

--- a/.github/workflows/package-ffi-engine-android.yml
+++ b/.github/workflows/package-ffi-engine-android.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - "flipt-engine-ffi/**"
       - "flipt-evaluation/**"
+      - ".github/workflows/package-ffi-engine-android.yml"
   push:
     tags: ["flipt-engine-ffi-v**"]
 
@@ -55,7 +56,7 @@ jobs:
       - name: Build
         run: cargo ndk --platform 30 --target ${{ matrix.platform.arch }} build --release
         env:
-          RUSTFLAGS: "-Zlocation-detail=none -Zfmt-debug=none"
+          RUSTFLAGS: "-Zlocation-detail=none -Zfmt-debug=none -C link-arg=-Wl,-z,max-page-size=0x4000"
 
       - name: Package
         run: |
