--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,3 +11,9 @@ rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.x86_64-linux-android]
 rustflags = ["-C", "target-feature=-crt-static"]
+
+[target.aarch64-apple-ios]
+rustflags = ["-C", "link-arg=-miphoneos-version-min=10.0"]
+
+[target.aarch64-apple-ios-sim]
+rustflags = ["-C", "link-arg=-mios-simulator-version-min=10.0"]
