feat(ffi): replace static auth HeaderMap with watch channel in HTTPFetcher
Signed-off-by: Vikas <shettyvikas209@gmail.com>

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -29,6 +29,7 @@ tokio = { version = "1.36.0", features = [
   "io-util",
   "net",
   "time",
+  "sync",
 ], default-features = false }
 tokio-util = { version = "0.7", features = ["io"], default-features = false }
 futures-util = { version = "0.3.30", default-features = false }
